# Virglrenderer-test

./: .editorconfig  .gitlab-ci.yml  android-aarch64  android-arm32  android-x86_64  config.h.meson  egltest2.c  ios-aarch64  libdrm.pc  meson.build  meson.build.rej  meson_options.txt  patch.diff  vsrv
.github/workflows/: main.yml
.gitlab-ci/container/debian/: x86_64_test.sh  x86_test.sh
.gitlab-ci/expectations/host/: deqp-virgl-gl-fails.txt  deqp-virgl-gl-flakes.txt  deqp-virgl-gl.toml  deqp-virgl-gles-fails.txt  deqp-virgl-gles-flakes.txt  piglit-virgl-gl-fails.txt  piglit-virgl-gl-flakes.txt  piglit-virgl-gl-skips.txt  piglit-virgl-gles-fails.txt  piglit-virgl-gles-flakes.txt  piglit-virgl-gles-skips.txt  virgl-gl-fails.txt  virgl-gl-flakes.txt  virgl-gl-skips.txt  virgl-gles-fails.txt  virgl-gles-flakes.txt  virgl-gles-skips.txt
.gitlab-ci/expectations/virt/: deqp-virgl-gl-fails.txt  deqp-virgl-gl-flakes.txt  deqp-virgl-gles-fails.txt  deqp-virgl-gles-flakes.txt  deqp-virgl-gles.toml  piglit-virgl-gl-fails.txt  piglit-virgl-gl-flakes.txt  piglit-virgl-gl-skips.txt  piglit-virgl-gles-fails.txt  piglit-virgl-gles-flakes.txt  piglit-virgl-gles-skips.txt  traces-virgl.yml  venus-fails.txt  venus-flakes.txt  venus-skips.txt  virgl-gl-fails.txt  virgl-gl-flakes.txt  virgl-gl-skips.txt  virgl-gles-fails.txt  virgl-gles-flakes.txt  virgl-gles-skips.txt
.gitlab-ci/meson/: build.sh
ci/: .gitlab-ci.yml  build-container.sh  run_ci_locally.sh  run_tests.sh
docs/: vkr-clang-format
server/: main.c  meson.build  render_client.c  render_client.h  render_common.c  render_common.h  render_context.c  render_context.h  render_protocol.h  render_server.c  render_server.h  render_state.c  render_state.h  render_virgl.c  render_worker.c  render_worker.h
src/: drm_hw.h  gbm.h  meson.build  mman_win32.c  mman_win32.h  venus_hw.h  virgl-version.h.meson  virgl_context.c  virgl_context.h  virgl_fence.c  virgl_fence.h  virgl_hw.h  virgl_protocol.h  virgl_resource.c  virgl_resource.h  virgl_util.c  virgl_util.h  virgl_video.c  virgl_video.h  virgl_video_hw.h  virglrenderer.c  virglrenderer.h  vkr_cs.c  vkr_cs.h  vkr_object.h  vkr_renderer.c  vkr_renderer.h  vkr_ring.c  vrend_blitter.c  vrend_blitter.h  vrend_debug.c  vrend_debug.h  vrend_decode.c  vrend_formats.c  vrend_iov.h  vrend_object.c  vrend_renderer.c  vrend_renderer.h  vrend_shader.c  vrend_shader.h  (+12 more)
src/drm/: .clang-format  drm_fence.c  drm_fence.h  drm_renderer.c  drm_renderer.h  drm_util.c  drm_util.h
src/drm/msm/: msm_proto.h  msm_renderer.c
src/gallium/: meson.build
src/mesa/: meson.build
src/mesa/compat/c11/: threads_win32.h
src/mesa/pipe/: p_compiler.h
src/mesa/util/: anon_file.c  bitscan.h  compiler.h  hash_table.c  hash_table.h  libsync.h  list.h  macros.h  os_misc.c  u_cpu_detect.c  u_debug.h  u_formats.h  u_math.c  u_math.h  u_thread.h
src/proxy/: proxy_common.c  proxy_common.h  proxy_context.c  proxy_context.h  proxy_renderer.c  proxy_renderer.h  proxy_server.c
src/venus/: vkr_allocator.c  vkr_buffer.c  vkr_buffer.h  vkr_command_buffer.c  vkr_command_buffer.h  vkr_common.c  vkr_common.h  vkr_context.c  vkr_context.h  vkr_cs.c  vkr_cs.h  vkr_descriptor_set.c  vkr_descriptor_set.h  vkr_device.c  vkr_device.h  vkr_device_memory.c  vkr_device_memory.h  vkr_device_object.py  vkr_image.c  vkr_image.h  vkr_instance.c  vkr_instance.h  vkr_physical_device.c  vkr_physical_device.h  vkr_pipeline.c  vkr_pipeline.h  vkr_query_pool.c  vkr_query_pool.h  vkr_queue.c  vkr_queue.h  vkr_render_pass.c  vkr_render_pass.h  vkr_renderer.c  vkr_renderer.h  vkr_ring.c  vkr_ring.h  vkr_transport.c
src/venus-protocol/: vn_protocol_renderer.h  vn_protocol_renderer_buffer.h  vn_protocol_renderer_buffer_view.h  vn_protocol_renderer_command_buffer.h  vn_protocol_renderer_command_pool.h  vn_protocol_renderer_cs.h  vn_protocol_renderer_defines.h  vn_protocol_renderer_descriptor_pool.h  vn_protocol_renderer_descriptor_set.h  vn_protocol_renderer_descriptor_set_layout.h  vn_protocol_renderer_descriptor_update_template.h  vn_protocol_renderer_device.h  vn_protocol_renderer_device_memory.h  vn_protocol_renderer_dispatches.h  vn_protocol_renderer_event.h  vn_protocol_renderer_fence.h  vn_protocol_renderer_framebuffer.h  vn_protocol_renderer_handles.h  vn_protocol_renderer_image.h  vn_protocol_renderer_image_view.h  vn_protocol_renderer_info.h  vn_protocol_renderer_instance.h  vn_protocol_renderer_pipeline.h  vn_protocol_renderer_pipeline_cache.h  vn_protocol_renderer_pipeline_layout.h  vn_protocol_renderer_query_pool.h  vn_protocol_renderer_queue.h  vn_protocol_renderer_render_pass.h  vn_protocol_renderer_sampler.h  vn_protocol_renderer_sampler_ycbcr_conversion.h  vn_protocol_renderer_semaphore.h  vn_protocol_renderer_shader_module.h  vn_protocol_renderer_structs.h  vn_protocol_renderer_transport.h  vn_protocol_renderer_types.h
src/venus/venus-protocol/: vn_protocol_renderer.h  vn_protocol_renderer_buffer.h  vn_protocol_renderer_buffer_view.h  vn_protocol_renderer_command_buffer.h  vn_protocol_renderer_command_pool.h  vn_protocol_renderer_cs.h  vn_protocol_renderer_defines.h  vn_protocol_renderer_descriptor_pool.h  vn_protocol_renderer_descriptor_set.h  vn_protocol_renderer_descriptor_set_layout.h  vn_protocol_renderer_descriptor_update_template.h  vn_protocol_renderer_device.h  vn_protocol_renderer_device_memory.h  vn_protocol_renderer_dispatches.h  vn_protocol_renderer_event.h  vn_protocol_renderer_fence.h  vn_protocol_renderer_framebuffer.h  (+20 more)
subprojects/: percetto.wrap  perfetto.wrap  sysprof.wrap  vperfetto.wrap
subprojects/packagefiles/vperfetto/: meson.build
tests/: meson.build  test_fuzzer_formats.c  test_virgl_cmd.c  test_virgl_fence.c  test_virgl_init.c  test_virgl_resource.c  test_virgl_strbuf.c  test_virgl_transfer.c  testvirgl.c  testvirgl.h  testvirgl_encode.c  testvirgl_encode.h
tests/fuzzer/: meson.build  virgl_drm_fuzzer.c  virgl_fuzzer.c  virgl_venus_fuzzer.c
vtest/: meson.build  meson.build.rej  vtest_fuzzer.c  vtest_main.c  vtest_renderer.c  vtest_server.c  vtest_server.c.rej  vtest_server.h
(+39 files in other folders)
